--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
+
 
 .hero{
     position: relative;
@@ -17,7 +19,7 @@
 header h1{
     position: absolute;
     left: 50%;
-    top: 40%;
+    top: 300px;
     text-align: center;
     transform: translate(-50%, -50%);
     width: 40%;
@@ -29,7 +31,7 @@ header h1{
 header h2{
     position: absolute;
     left: 50%;
-    top: 65%;
+    top: 500px;
     text-align: center;
     transform: translate(-50%, -50%);
     width: 40%;
@@ -57,7 +59,6 @@ header img{
     display: flex;
     flex-wrap: wrap;
     position: absolute;
-    width: 80%;
     margin: 20px 10% 0 10%;
 }
 .card {
@@ -65,10 +66,12 @@ header img{
     height: 300px;
     margin: 5px auto;
 }
+
 .res-card{
     width: 100%;
     height: 250px;
     border-radius: 12px;
+    transition: transform .2s;
 }
 .card h4{
     padding: 0 0 3px 10px;
@@ -82,6 +85,183 @@ header img{
     font-weight: 600;
 }
 
+
 a:hover{
-    cursor: grab;
+    cursor: grab; 
+}
+
+.res-card:hover {
+    transform: scale(1.15);
+}
+
+.info-boxes{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    flex-grow: 1;
+    margin: 150px 50px 50px 50px;
+    font-family: "Roboto", sans-serif;
+    text-align: center;
+}
+
+.info-box{
+    width: 250px;
+    height: 400px;
+    margin-bottom: 300px;
+}
+
+.info-box img{
+    width: 100%;
+}
+
+.info-box h3{
+    font-size: 200%;
+    padding: 20px 0;
+}
+
+.info-box p{
+    font-size: 110%;
+    font-weight: 600;
+}
+
+
+footer{
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    margin: 50px 0 0 0;
+    height: 200px;
+    font-size: 200%;
+    font-family: "Bree Serif", sans-serif;
+    background-color: rgb(31, 29, 29);
+    width: 100vw;
+    left: calc(-50vw + 50%);
+}
+
+footer img{
+    height: 30px;
+    -webkit-filter: grayscale(1) invert(1);
+    filter: grayscale(1) invert(1)
+}
+
+footer h2{
+    margin-top: 50px;
+    color: white;
+    font-style: italic;
+}
+
+@media screen and (max-width: 1800px){
+    .container {
+        margin: 20px 5% 0 5%;
+    }
+}
+
+@media screen and (max-width: 1600px){
+    .card{
+        width: 400px;
+        height: 250px;
+        margin: 25px auto;
+    }
+}
+
+@media screen and (max-width: 1300px){
+    .card{
+        height: 350px;
+        width: 500px;
+    }
+}
+
+@media screen and (max-width: 1200px){
+    header h1{
+        width: 60%;
+        top: 300px;
+        transform: translate(-50%, -50%);
+    }
+    header h2{
+        width: 60%;
+        top: 450px;
+        transform: translate(-50%, -50%);
+    }
+}
+
+@media screen and (max-width: 1111px) {
+    .card {
+        width:400px;
+        height: 250px;
+    }
+}
+
+@media screen and (max-width: 986px){
+    header h1{
+        width: 80%;
+    }
+    .container{
+        margin: 20px 0 0 0;
+    }
+    .info-boxes{
+        margin: 60px 0 50px 0
+    }
+    .info-box{
+        width: 150px;
+        height: 225px;
+        font-size: 12px;
+    }
+}
+@media screen and (max-width: 800px){
+    header h1{
+        font-size: 40px;
+        top: 300px;
+        transform: translate(-50%, -50%);
+
+    }
+    header h2{
+        font-size: 30px;
+        top: 450px;
+        transform: translate(-50%, -50%);
+    }
+    .card{
+        width: 80%;
+        height: 400px;
+    }
+    .card img{
+        height: 350px;
+    }
+    .info-boxes{
+        margin: 50px 0 50px 0;
+    }
+    .info-box{
+        width: 125px;
+        height: 200px;
+        font-size: 10px;
+    }
+}
+@media screen and (max-width: 500px){
+    header h1{
+        width: 80%;
+        top: 300px;
+        font-size: 35px;
+    }
+    header h2{
+        width: 80%;
+        top: 450px;
+        font-size: 25px;
+    }
+    .card{
+        height: 250px;
+    }
+    .card img{
+        height: 200px;
+    }
+    footer{
+        height: 150px;
+        font-size: 100%;
+    }
+}
+
+@media screen and (max-width: 380px){
+    .info-box{
+        width: 75px;
+        height: 150px;
+        font-size: 8px;
+    }
 }
