Changed the image paths to cdn links for faster loading and deleted redundant images and image folders

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 
 .hero{
     position: relative;
-    background-image: url("../images/shutterstock_1724611486.jpg");
+    background-image: url("https://ik.imagekit.io/liamallen34/Kachow_Images/shutterstock_1724611486.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668619841318");
     width: 100%;
     height: 700px;
     background-position: center;
